--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
+	"ownerNumber": "918590866477",
+	"ownerNumberr": "+918590866477",
+	"botnumber": "918590866477",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
-	"ig": "https://instagram.com/HYPER_MOD",
-	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
+	"wa": "wa.me/+918590866477",
+	"donate": "918590866477",
+	"ig": "https://instagram.com/shadow_3",
+	"gt": "https://github.com/Amalsir",
+	"ownername": "© AMALSIR",
 	"botname":"「 Queen Alexa 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 queen Alexa 」\n© -3"
 }
